--- a/.env
+++ b/.env
@@ -7,10 +7,13 @@ VITE_SUPABASE_URL="https://wscdzjtwaxunorfmpuzl.supabase.co"
 VITE_OPENAI_API_KEY="sk-1234efghqrstuvwx1234efghqrstuvwx1234efgh"
 VITE_GEMINI_API_KEY="AIzaSyBP2uQ6KK4aJt9aDkIfkp3vvwuH2dw6zEM"
 
-# Email Service Configuration - OPTIONAL FOR NOW
-VITE_EMAIL_SERVICE_KEY="your_email_key_here"
-VITE_EMAIL_FROM_ADDRESS="admin@codewars.com"
-VITE_EMAIL_FROM_NAME="CodeWars 2.0"
+# Email Service Configuration - EMAILJS (FREE)
+VITE_EMAIL_SERVICE="emailjs"
+VITE_EMAILJS_SERVICE_ID="service_lcj8bmd"
+VITE_EMAILJS_TEMPLATE_ID="your_template_id_here"
+VITE_EMAILJS_PUBLIC_KEY="Dfbj9WVmUX8oB4DQ2"
+VITE_EMAIL_FROM_ADDRESS="acmgsfcu@gmail.com"
+VITE_EMAIL_FROM_NAME="ACM GSFCU"
 
 # Competition Configuration
 VITE_ROUND1_TIME_LIMIT=1800
